package com.nullpointer.userscompose.core.constants

object Constants{
    const val TAG_BUTTON_ADD="TAG_BUTTON_ADD"
    const val TAG_BUTTON_REMOVE="TAG_BUTTON_REMOVE"
    const val TAG_BUTTON_CANCEL="TAG_BUTTON_CANCEL"
    const val TAG_LIST_USERS="TAG_LIST_USERS"
}