<resources>
    <string name="app_name">UsersCompose</string>

    <!-- selection resource-->
    <plurals name="selected_items">
        <item quantity="one">Un elemento seleccionado</item>
        <item quantity="other">%d elementos seleccionados</item>
    </plurals>
    <plurals name="deleted_items">
        <item quantity="one">Un elemento eliminado</item>
        <item quantity="other">%d elementos eliminados</item>
    </plurals>

    <!-- message error request -->
    <string name="error_internet">No hay conexión a internet</string>
    <string name="server_time_now">Hay un error en la conexión</string>
    <string name="error_unknow">Error desconocido</string>

    <!-- toolbar actions -->
    <string name="description_clear_selection">Icono para limpiar la selección</string>
    <string name="description_arrow_back">Icono para regresar a la pantalla anterior</string>
    <string name="description_icon_options">Abrir el menú de opciones</string>
    <string name="deleter_all">Elimina todos los usuarios</string>

    <!-- users screen -->
    <string name="action_stop_add_user">Se canceló la operación</string>
    <string name="text_empty_users">No hay usuarios guardados, agrega uno</string>
    <string name="title_numbers_user_saved">Número de usuarios %d</string>
    <string name="description_add_mew_user">Agrega un nuevo usuario</string>
    <string name="description_deleter_user_selected">Elimina los usuarios seleccionados</string>
    <string name="description_cancel_add_user">Cancela la operacion actual</string>
    <string name="description_img_user">Imagen de perfil de usuario %s</string>

    <!-- details screen -->
    <string name="title_details_user">Detalles del usuario</string>
    <string name="error_users_database">Error al obtener los usuarios de la base de datos</string>

    <string name="description_deleter_user_button">Elimina el usuario actual</string>
    <string name="name_user_text">Nombre:</string>
    <string name="last_name_user_text">Apellido:</string>
    <string name="city_user_text">Cuidad:</string>
    <string name="date_user_text">Fecha de guardado:</string>


</resources>